# ground-water-hydraulics-ossf

./: .gitignore  EXECUTIVE_HANDOFF.md  README.md  SPRINTS.md  conftest.py  pyproject.toml  simulate.py
config/: site_example.json
core/: __init__.py  attenuation.py  authorization.py  darcy.py  engine_runner.py  governance.py  physics_engine_base.py  physics_ogata_banks.py  physics_registry.py  preflight.py  report.py  result_contract.py  run_session.py  transport.py  validation.py
data/: constituents.json  pathogens.json  soil_database.json  soils.json
docs/: CASE_HISTORY.md  GOVERNANCE.md  OUTPUT_CONTRACT.md  SITE_CASE_V1.md  SITE_CASE_V1_1.md
schemas/: case_history.schema.json  ossf-case-history-1.0.0.schema.json  ossf-site-case-1.0.0.schema.json  ossf-site-case-1.1.0.schema.json
tests/: _v1_helpers.py  bench_authorization.py  conftest.py  test_attenuation.py  test_authorization.py  test_case_history.py  test_contract_primitives.py  test_critical_binding_policy.py  test_darcy.py  test_end_to_end.py  test_evidence_records.py  test_ex001_regression.py  test_governed_execution.py  test_history_artifact_paths.py  test_history_builder.py  test_history_digest.py  test_history_driver.py  test_history_identity.py  test_history_serialization.py  test_physics_ogata_banks.py  test_preflight.py  test_public_api_surface.py  test_readiness_assessment.py  test_readiness_digest.py  test_result_contract.py  test_run_session.py  test_schema_compatibility_matrix.py  test_screening.py  test_site_case_evidence.py  test_site_case_evidence_serialization.py  test_site_case_legacy.py  (+5 more)
(+59 files in other folders)
